--- a/index.html
+++ b/index.html
@@ -1,8 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <title>Thomas Gold Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" /> -->
+    <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
     </head>
+
+    <body>
+        <header>
+            <h1>Thomas Gold</h1>
+                <nav>
+                    <a href="#Projects">Projects</a>
+                    <a href="#About-Me">About Me</a>
+                    <a href="#Contact">Contact</a>       
+            </nav>
+        </header>
+
+        <main>
+            <div class="nav-anchor"></div>
+            <div class="hero"></div>
+            <section id="Projects" class="main-section">
+                <h2>Projects</h2>
+                <p>Lorem ispum</p>
+            </section>
+            <section id="About-Me" class="main-section">
+                <h2>About Me</h2>
+                <p>Lorem Ipsum</p>
+            </section>
+            <section id="Contact" class="main-section">
+                <h2>Contact</h2>
+                <p>Lorem Ipsum</p>
+            </section>
+        </main>
+    </body>
 </html>
