--- a/index.html
+++ b/index.html
@@ -20,18 +20,24 @@
 
         <main>
             <div class="nav-anchor"></div>
-            <div class="hero"></div>
-            <section id="Projects" class="main-section">
-                <h2>Projects</h2>
-                <p>Lorem ispum</p>
-            </section>
+
             <section id="About-Me" class="main-section">
                 <h2>About Me</h2>
-                <p>Lorem Ipsum</p>
+                <p>My name is Thomas Gold. I am an aspiring developer and current student at the University of Utah Full-Stack Flex Coding Bootcamp.</p>
+            </section>
+            <section id="Projects" class="main-section">
+                <h2>Projects</h2>
+                <!-- <section>
+                    <img>
+                    <a></a>
+                </section> -->
             </section>
             <section id="Contact" class="main-section">
-                <h2>Contact</h2>
-                <p>Lorem Ipsum</p>
+                <h3>Contact</h3>
+                <ul class="contact-info">
+                    <li>Email: thomaswgold90@gmail.com</li>
+                    <li>Phone: 435-659-9044</li>
+                </ul>
             </section>
         </main>
     </body>
