--- a/index.html
+++ b/index.html
@@ -21,24 +21,26 @@
         <main>
             <div class="nav-anchor"></div>
 
-            <section id="About-Me" class="main-section">
+            <section id="About-Me" class="about-container">
                 <h2>About Me</h2>
                 <p>My name is Thomas Gold. I am an aspiring developer and current student at the University of Utah Full-Stack Flex Coding Bootcamp.</p>
             </section>
-            <section id="Projects" class="main-section">
+            <section id="Projects" class="project-container">
                 <h2>Projects</h2>
-                <!-- <section>
-                    <img>
-                    <a></a>
-                </section> -->
+                <section>
+                    <img class= "horiseon" src="assets/images/01-html-css-git-homework-demo.png">
+                    <a href="https://tgold90.github.io/Horiseon-Refactor/">
+                </section>
             </section>
-            <section id="Contact" class="main-section">
+        </main>
+
+            <footer id="Contact">
                 <h3>Contact</h3>
-                <ul class="contact-info">
-                    <li>Email: thomaswgold90@gmail.com</li>
-                    <li>Phone: 435-659-9044</li>
-                </ul>
-            </section>
+                    <div>
+                    <span id="contact-info">Email: thomaswgold90@gmail.com</span>
+                    <span id="contact-info">Phone: 435-659-9044</span>
+                    </div>
+            </footer>
         </main>
     </body>
 </html>
