--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <main>
             <div class="nav-anchor"></div>
 
-            <section id="About-Me" class="about-container">
+            <section id="About-Me" class="main-section">
                 <h2>About Me</h2>
                 <p>My name is Thomas Gold. I am an aspiring developer and current student at the University of Utah Full-Stack Flex Coding Bootcamp.</p>
             </section>
-            <section id="Projects" class="project-container">
+            <section id="Projects" class="main-section">
                 <h2>Projects</h2>
                 <section>
                     <img class= "horiseon" src="assets/images/01-html-css-git-homework-demo.png">
