css grid layout

--- a/index.html
+++ b/index.html
@@ -21,16 +21,31 @@
         <main>
             <div class="nav-anchor"></div>
 
-            <section id="About-Me" class="main-section">
+            <section id="About-Me" class="about-section">
+                <div class="me">
                 <h2>About Me</h2>
+                <!-- <img placeholder> -->
+                </div>
                 <p>My name is Thomas Gold. I am an aspiring developer and current student at the University of Utah Full-Stack Flex Coding Bootcamp.</p>
             </section>
             <section id="Projects" class="main-section">
                 <h2>Projects</h2>
-                <section>
-                    <img class= "horiseon" src="assets/images/01-html-css-git-homework-demo.png">
+                <div class="cards">
+                <section class="Horiseon-div">
                     <a href="https://tgold90.github.io/Horiseon-Refactor/">
+                    <img class= "horiseon" src="assets/images/01-html-css-git-homework-demo.png" alt="Horiseon-Refactor Application">
+                    </a>
                 </section>
+                <div class="small-project">
+                    <p>place holder</p> 
+                </div>
+                <div class="small-project">
+                    <p>place holder</p> 
+                </div><div class="small-project">
+                    <p>place holder</p> 
+                </div><div class="small-project">
+                    <p>place holder</p> 
+                </div>
             </section>
         </main>
 
