--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header>
             <h1>Thomas Gold</h1>
                 <nav>
-                    <a href="#Projects">Projects</a>
                     <a href="#About-Me">About Me</a>
+                    <a href="#Projects">Projects</a>
                     <a href="#Contact">Contact</a>       
             </nav>
         </header>
@@ -21,30 +21,34 @@
         <main>
             <div class="nav-anchor"></div>
 
-            <section id="About-Me" class="about-section">
+            <section id="About-Me" class="main-section">
                 <div class="me">
                 <h2>About Me</h2>
                 <!-- <img placeholder> -->
                 </div>
-                <p>My name is Thomas Gold. I am an aspiring developer and current student at the University of Utah Full-Stack Flex Coding Bootcamp.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </section>
+
             <section id="Projects" class="main-section">
                 <h2>Projects</h2>
                 <div class="cards">
-                <section class="Horiseon-div">
+                    <section class="Horiseon-div">
                     <a href="https://tgold90.github.io/Horiseon-Refactor/">
-                    <img class= "horiseon" src="assets/images/01-html-css-git-homework-demo.png" alt="Horiseon-Refactor Application">
-                    </a>
-                </section>
-                <div class="small-project">
-                    <p>place holder</p> 
-                </div>
-                <div class="small-project">
-                    <p>place holder</p> 
-                </div><div class="small-project">
-                    <p>place holder</p> 
-                </div><div class="small-project">
-                    <p>place holder</p> 
+                    <img class= "horiseon" src="assets/images/01-html-css-git-homework-demo.png" alt="Horiseon-Refactor Application"></a>
+                    </section>
+
+                    <div class="small-project">
+                    <img src="assets/images/pexels-chase-yaws-11513528.jpg" alt="Horiseon-Refactor Application">
+                    </div>
+                    <div class="small-project">
+                    <img src="assets/images/pexels-eduardo-soares-5499019.jpg" alt="Horiseon-Refactor Application">
+                    </div>
+                    <div class="small-project">
+                    <img src="assets/images/pexels-josh-hild-12405196.jpg" alt="Horiseon-Refactor Application">
+                    </div>
+                    <div class="small-project">
+                    <img src="assets/images/pexels-pixabay-65894.jpg" alt="Horiseon-Refactor Application">
+                    </div>
                 </div>
             </section>
         </main>
