colors and scoll-padding-top

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h2>Projects</h2>
                 <div class="cards">
                     <section class="Horiseon-div">
-                    <a href="https://tgold90.github.io/Horiseon-Refactor/">
+                    <a href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank">
                     <img class= "horiseon" src="assets/images/01-html-css-git-homework-demo.png" alt="Horiseon-Refactor Application"></a>
                     </section>
 
