--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Thomas Gold Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Oswald:wght@300&family=PT+Serif:ital@1&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" /> -->
     <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
     </head>
@@ -23,14 +26,11 @@
 
             <section id="About-Me" class="main-section">
                 <h2>About Me</h2>
-<<<<<<< HEAD
                 <div class="me">
                 <img class="me-img" src="assets/images/ME-IMG_6954.jpeg">
                 <img class="me-img" src="assets/images/GREEN-IMG_7674.jpeg">
                 <img class="me-img" src="assets/images/ERN-IMG_7883.jpeg">
-=======
-                <img class="me-img" src="assets/images/ ME-IMG_6954.jpeg">
->>>>>>> d3e0f98a4061f2717804177b012d16f2ab59ec9c
+                <img class="me-img" src="assets/images/peru-IMG_4526.jpeg">
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </section>
