added alt tags to images

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <section id="About-Me" class="main-section">
                 <h2>About Me</h2>
                 <div class="me">
-                <img class="me-img" src="assets/images/ME-IMG_6954.jpeg">
-                <img class="me-img" src="assets/images/GREEN-IMG_7674.jpeg">
-                <img class="me-img" src="assets/images/ERN-IMG_7883.jpeg">
-                <img class="me-img" src="assets/images/peru-IMG_4526.jpeg">
+                <img class="me-img" src="assets/images/ME-IMG_6954.jpeg" alt="image of me playing guitar in a Maloka">
+                <img class="me-img" src="assets/images/GREEN-IMG_7674.jpeg" alt="Green hills in the foothills of Salt Lake City">
+                <img class="me-img" src="assets/images/ERN-IMG_7883.jpeg" alt="My dog Ernie">
+                <img class="me-img" src="assets/images/peru-IMG_4526.jpeg" alt="Mandala of rose petals with a statue of Ganehsa (Hindu God of Destruction) in the center ">
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </section>
@@ -40,20 +40,24 @@
                 <div class="cards">
                     <section class="Horiseon-div">
                     <a href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank">
-                    <img class= "horiseon" src="assets/images/01-html-css-git-homework-demo.png" alt="Horiseon-Refactor Application"></a>
+                    <figure>
+                    <img class= "horiseon" src="assets/images/01-html-css-git-homework-demo.png" alt="Horiseon-Refactor Application">
+                    <figcaption>Horiseon-Refactor Application</figcaption>
+                    </figure>
+                    </a>
                     </section>
 
                     <div class="small-project">
-                    <img src="assets/images/1mohammad-alizade-XgeZu2jBaVI-unsplash.jpg" alt="Horiseon-Refactor Application">
+                    <img src="assets/images/1mohammad-alizade-XgeZu2jBaVI-unsplash.jpg" alt="Project 2 placeholder image">
                     </div>
                     <div class="small-project">
-                    <img src="assets/images/pexels-eduardo-soares-5499019.jpg" alt="Horiseon-Refactor Application">
+                    <img src="assets/images/pexels-eduardo-soares-5499019.jpg" alt="Project 3 placeholder image">
                     </div>
                     <div class="small-project">
-                    <img src="assets/images/4thought-catalog-EMX1eJ1BcgU-unsplash.jpg" alt="Horiseon-Refactor Application">
+                    <img src="assets/images/4thought-catalog-EMX1eJ1BcgU-unsplash.jpg" alt="Project 4 placeholder image">
                     </div>
                     <div class="small-project">
-                    <img src="assets/images/3philipp-katzenberger-iIJrUoeRoCQ-unsplash.jpg" alt="Horiseon-Refactor Application">
+                    <img src="assets/images/3philipp-katzenberger-iIJrUoeRoCQ-unsplash.jpg" alt="Project 5 placeholder image">
                     </div>
                 </div>
             </section>
