minor changes and Readme

--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
                 <div class="cards">
                     <section class="Horiseon-div">
                     <a href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank">
-                    <figure>
                     <img class= "horiseon" src="assets/images/01-html-css-git-homework-demo.png" alt="Horiseon-Refactor Application">
-                    <figcaption>Horiseon-Refactor Application</figcaption>
-                    </figure>
+                    <h3>Horiseon-Refactor Project</h3>
                     </a>
                     </section>
 
@@ -67,7 +65,7 @@
                 <h3>Contact</h3>
                     <div>
                     <span id="contact-info">Email: thomaswgold90@gmail.com</span>
-                    <span id="contact-info">Phone: 435-659-9044</span>
+                    <!-- <span id="contact-info">Phone: 435-659-9044</span> -->
                     </div>
             </footer>
         </main>
