--- a/index.html
+++ b/index.html
@@ -25,14 +25,11 @@
             <div class="nav-anchor"></div>
 
             <section id="About-Me" class="about-section">
+                <!--Need to get h2 out of the grid so it sits above the content and doesn't take up a grid cell -->
                     <h2>About Me</h2>
                     <div class="about-image-div">
                     <img class="me-img" src="assets/images/ME-IMG_6954.jpeg" alt="image of me playing guitar in a Maloka">
                     </div>
-                <!-- <img class="me-img" src="assets/images/GREEN-IMG_7674.jpeg" alt="Green hills in the foothills of Salt Lake City">
-                    <img class="me-img" src="assets/images/ERN-IMG_7883.jpeg" alt="My dog Ernie">
-                    <img class="me-img" src="assets/images/peru-IMG_4526.jpeg" alt="Mandala of rose petals with a statue of Ganehsa (Hindu God of Destruction) in the center "> -->
-                    <div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
             </section>
