cleaning up CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" /> -->
     <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
     </head>
-
+    <!--The body of my website uses a Flex layout with column direction. The individual sections use Grid.-->
     <body>
         <header>
             <h1>Thomas Gold</h1>
@@ -23,9 +23,8 @@
 
         <main>
             <div class="nav-anchor"></div>
-
+            <!--This is a section about me. It uses Grid Layout-->
             <section id="About-Me" class="about-section">
-                <!--Need to get h2 out of the grid so it sits above the content and doesn't take up a grid cell -->
                     <h2>About Me</h2>
                     <div class="about-image-div">
                     <img class="me-img" src="assets/images/ME-IMG_6954.jpeg" alt="image of me playing guitar in a Maloka">
@@ -33,7 +32,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
             </section>
-
+            <!--This is my project section. It uses Grid layout-->
             <section id="Projects" class="project-section">
                 <h2>Projects</h2>
                 <div class="cards">
