fixed link text visibility

--- a/index.html
+++ b/index.html
@@ -37,22 +37,28 @@
                 <h2>Projects</h2>
                 <div class="cards">
                     <section class="Horiseon-div">
-                    <a href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank">
-                    <img class= "horiseon" src="assets/images/01-html-css-git-homework-demo.png" alt="Horiseon-Refactor Application">
-                    <h3>Horiseon-Refactor Project</h3>
+                    <a class="horiseon" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank">
+                    <!-- <img class= "horiseon" src="assets/images/01-html-css-git-homework-demo.png" alt="Horiseon-Refactor Application"> -->
+                    <div class="project-title">
+                        <h3>Horiseon-Refactor Project</h3>
+                    </div>
                     </a>
                     </section>
-
-                    <div class="small-project">
-                    <img src="assets/images/1mohammad-alizade-XgeZu2jBaVI-unsplash.jpg" alt="Project 2 placeholder image">
+                    <div class="small-project1 small-project">
+                        <a href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank">
+                            <!-- <img src="assets/images/1mohammad-alizade-XgeZu2jBaVI-unsplash.jpg" alt="Project 2 placeholder image"> -->
+                            <div class="project-title">
+                            <h3>Project 2</h3>
+                            </div>
+                        </a>
                     </div>
-                    <div class="small-project">
+                    <div class="small-project2 small-project">
                     <img src="assets/images/pexels-eduardo-soares-5499019.jpg" alt="Project 3 placeholder image">
                     </div>
-                    <div class="small-project">
+                    <div class="small-project3 small-project">
                     <img src="assets/images/4thought-catalog-EMX1eJ1BcgU-unsplash.jpg" alt="Project 4 placeholder image">
                     </div>
-                    <div class="small-project">
+                    <div class="small-project4 small-project">
                     <img src="assets/images/3philipp-katzenberger-iIJrUoeRoCQ-unsplash.jpg" alt="Project 5 placeholder image">
                     </div>
                 </div>
