adjusting project images, adding alt tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Thomas Gold Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Oswald:wght@300&family=PT+Serif:ital@1&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" /> -->
@@ -45,30 +45,30 @@
                         </a>
                     </section>
                     <div class="small-project">
-                        <a class="small-project1" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank">
+                        <a class="small-project2" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="image of blurred pink and blue colros">
                         <div class="project-title">
                         <h3>Project 2</h3>
                         </div>
                         </a>
                     </div>
                     <div class="small-project">
-                        <a class="small-project2" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank">
+                        <a class="small-project3" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="image of Ganesha statue surrounded by rose petals">
                         <div class="project-title">
                         <h3>Project 3</h3>
                         </div>
                         </a>
                     </div>
                     <div class="small-project">
-                        <a class="small-project3" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank">
+                        <a class="small-project4" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="image of peacock tail feathers">
                         <div class="project-title">
                         <h3>Project 4</h3>
                         </div>
                         </a>
                     </div>
                     <div class="small-project">
-                        <a class="small-project4" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank">
+                        <a class="small-project5" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="side view of a partially open laptop">
                         <div class="project-title">
-                        <h3>Project 2</h3>
+                        <h3>Project 5</h3>
                         </div>
                         </a>    
                     </div>
