adding scroll behavior and cleaning up CSS

--- a/index.html
+++ b/index.html
@@ -38,35 +38,35 @@
                 <div class="cards">
                     <section class="Horiseon-div">
                         <a class="horiseon" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank">
-                        <!-- <img class= "horiseon" src="assets/images/01-html-css-git-homework-demo.png" alt="Horiseon-Refactor Application"> -->
                         <div class="project-title">
                         <h3>Horiseon-Refactor Project</h3>
+                        <p>HTML/CSS</p>
                         </div>
                         </a>
                     </section>
                     <div class="small-project">
-                        <a class="small-project2" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="image of blurred pink and blue colros">
+                        <a class="small-project2 small-project-style" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="image of blurred pink and blue colros">
                         <div class="project-title">
                         <h3>Project 2</h3>
                         </div>
                         </a>
                     </div>
                     <div class="small-project">
-                        <a class="small-project3" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="image of Ganesha statue surrounded by rose petals">
+                        <a class="small-project3 small-project-style" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="image of Ganesha statue surrounded by rose petals">
                         <div class="project-title">
                         <h3>Project 3</h3>
                         </div>
                         </a>
                     </div>
                     <div class="small-project">
-                        <a class="small-project4" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="image of peacock tail feathers">
+                        <a class="small-project4 small-project-style" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="image of peacock tail feathers">
                         <div class="project-title">
                         <h3>Project 4</h3>
                         </div>
                         </a>
                     </div>
                     <div class="small-project">
-                        <a class="small-project5" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="side view of a partially open laptop">
+                        <a class="small-project5 small-project-style" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="side view of a partially open laptop">
                         <div class="project-title">
                         <h3>Project 5</h3>
                         </div>
@@ -80,7 +80,7 @@
                 <h3>Contact</h3>
                     <div>
                     <span id="contact-info">Email: thomaswgold90@gmail.com</span>
-                    <!-- <span id="contact-info">Phone: 435-659-9044</span> -->
+                    <span id="contact-info">GitHub: TGold90</span>
                     </div>
             </footer>
         </main>
