updated about me bio and added some alt tags

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--The body of my website uses a Flex layout with column direction. The individual sections use Grid.-->
     <body>
         <header>
-            <h1>Thomas Gold</h1>
+            <h1>Tom Gold</h1>
                 <nav>
                     <a href="#About-Me">About Me</a>
                     <a href="#Projects">Projects</a>
@@ -27,16 +27,23 @@
             <section id="About-Me" class="about-section">
                 <h2>About Me</h2>
                 <div class="about-image-div">
-                    <img class="me-img" src="assets/images/landscape-me.jpeg" alt="image of me playing guitar in a Maloka">
+                    <img class="me-img" src="assets/images/landscape-me.jpeg" alt="image of my face out near some trees">
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="about-me-p" alt="A block of text explaining my current level of coding experience and my career path so far">
+                    <p>
+                    My name is Tom Gold. I am an up-and-coming programming mega-star. Though, I first need to complete my coding bootcamp course through the University of Utah. So far, I am reasonably proficient with HTML and CSS and I am just starting to learn Javascript.
+                        <br>
+                        <br>
+                     I am currently working in Product Development and Merchandising in the E-Commerce furninture industry.
+                    </p>
+                </div>
             </section>
             <!--This is my project section. It uses Grid layout-->
             <section id="Projects" class="project-section">
                 <h2>Projects</h2>
                 <div class="cards">
                     <section class="Horiseon-div">
-                        <a class="horiseon" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank">
+                        <a class="horiseon" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="Click on this image of my Horiseon Refactor project to go to that page">
                             <div class="project-title">
                                 <h3>Horiseon-Refactor Project</h3>
                                 <p>HTML/CSS</p>
