--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="about-me-p" alt="A block of text explaining my current level of coding experience and my career path so far">
                     <p>
-                    My name is Tom Gold. I am an up-and-coming programming mega-star. Though, I first need to complete my coding bootcamp course through the University of Utah. So far, I am reasonably proficient with HTML and CSS and I am just starting to learn Javascript.
+                    My name is Tom Gold. I am an up-and-coming programming mega-star. First, I just need to complete my coding bootcamp and land a few entry-level jobs... So far, I am reasonably proficient with HTML and CSS and I am just starting to learn Javascript.
                         <br>
                         <br>
                      I am currently working in Product Development and Merchandising in the E-Commerce furninture industry.
