minor changes html indentation

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                             </div>
                         </a>
                     </div>
+                    <!--This is the section for the smaller project links-->
                     <div class="small-project">
                         <a class="small-project3 small-project-style" href="https://tgold90.github.io/Horiseon-Refactor/" target="_blank" alt="image of Ganesha statue surrounded by rose petals">
                             <div class="project-title">
@@ -82,12 +83,12 @@
             </section>
         </main>
 
-            <footer id="Contact">
-                <h3>Contact</h3>
-                    <div>
+        <footer id="Contact">
+            <h3>Contact</h3>
+                <div>
                     <span id="contact-info">Email: thomaswgold90@gmail.com</span>
                     <span id="contact-info">GitHub: TGold90</span>
-                    </div>
+                </div>
             </footer>
         </main>
     </body>
