--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
                 <div class="about-image-div">
                     <img class="me-img" src="assets/images/landscape-me.jpeg" alt="image of my face out near some trees">
                 </div>
+                <!--thi si the image and paragraph div for the about-me section-->
                 <div class="about-me-p" alt="A block of text explaining my current level of coding experience and my career path so far">
                     <p>
                     My name is Tom Gold. I am an up-and-coming programming mega-star. First, I just need to complete my coding bootcamp and land a few entry-level jobs... So far, I am reasonably proficient with HTML and CSS and I am just starting to learn Javascript.
                         <br>
                         <br>
-                     I am currently working in Product Development and Merchandising in the E-Commerce furninture industry.
+                     I am currently working in Product Development and Merchandising in the E-Commerce furninture industry. I have a dog.
                     </p>
                 </div>
             </section>
