deletions and cleanup

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Oswald:wght@300&family=PT+Serif:ital@1&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" /> -->
     <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
     </head>
     <!--The body of my website uses a Flex layout with column direction. The individual sections use Grid.-->
@@ -29,7 +28,7 @@
                 <div class="about-image-div">
                     <img class="me-img" src="assets/images/landscape-me.jpeg" alt="image of my face out near some trees">
                 </div>
-                <!--thi si the image and paragraph div for the about-me section-->
+                <!--this is the image and paragraph div for the about-me section-->
                 <div class="about-me-p" alt="A block of text explaining my current level of coding experience and my career path so far">
                     <p>
                     My name is Tom Gold. I am an up-and-coming programming mega-star. First, I just need to complete my coding bootcamp and land a few entry-level jobs... So far, I am reasonably proficient with HTML and CSS and I am just starting to learn Javascript.
